feat: Configurar CDR para gravar em PostgreSQL ao invés de CSV
- Criado cdr_pgsql.conf com conexão ao banco
- Criado sql/04_create_cdr_table.sql com tabela cdr completa
- Criado view cdr_readable com labels em português
- Criado script config-cdr-pgsql.sh para setup automático
- Criado doc/CDR_QUERIES.md com queries úteis de análise
- Atualizado modules.conf para carregar cdr_pgsql.so
- Atualizado cdr.conf para gravar chamadas não atendidas
- Atualizado deploy.sh para verificar módulo cdr_pgsql
- Atualizado docker-compose.yml para montar pasta sql/
- Índices criados para performance (calldate, src, dst, uniqueid)
- Benefícios: Relatórios SQL, dashboard real-time, backup integrado

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       POSTGRES_PASSWORD: magnus123
       POSTGRES_DB: magnus_pbx
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
-    networks:
+      - ./postgres_data:/var/lib/postgresql/data      - ./sql:/docker-entrypoint-initdb.d    networks:
       - magnus-net
     restart: always
 
