feat: Adicionar módulos CDR ao modules.conf e habilitar log de chamadas não atendidas

--- a/asterisk_etc/cdr.conf
+++ b/asterisk_etc/cdr.conf
@@ -25,12 +25,12 @@
 ; entries will not be created. Unanswered Calls which get offered to an
 ; outgoing line will always receive log entries regardless of this option, and
 ; that is the intended behaviour.
-;unanswered = no
+unanswered = yes
 
 ; Define whether or not to log congested calls. Setting this to "yes" will
 ; report each call that fails to complete due to congestion conditions. Default
 ; is "no".
-;congestion = no
+congestion = yes
 
 ; Define whether or not to ignore bridging changes in CDRs. This prevents
 ; bridging changes from resulting in multiple CDRs for different parts of
