--- a/asterisk_etc/modules.conf
+++ b/asterisk_etc/modules.conf
@@ -19,6 +19,11 @@ load => res_config_pgsql.so
 ; CRITICAL: pbx_config.so carrega o extensions.conf (dialplan estático)
 load => pbx_config.so
 
+; Módulos de CDR (Call Detail Records)
+load => app_cdr.so
+load => cdr_custom.so
+load => cdr_pgsql.so
+
 ; Silencia erros de tecnologias nao utilizadas
 noload => cel_tds.so
 noload => app_adsiprog.so
