refactor: Reestruturar banco de dados com schema unificado
- Criar 01_init_schema.sql com estrutura CDR moderna (Asterisk 22)
- Criar 02_sample_data.sql com dados de exemplo (3 tenants, 5 ramais, 5 CDRs)
- Mover arquivos antigos para sql/99_deprecated/ (init.sql, teste_inicial.sql, 04_create_cdr_table.sql)
- Criar scripts/reset-database.sh para reset automatizado
- Criar doc/DATABASE_RESET.md com documentação completa
- Atualizar .gitignore para ignorar postgres_data/

BREAKING CHANGE: Estrutura CDR alterada
- Antes: uniqueid VARCHAR(150) PRIMARY KEY
- Depois: id BIGSERIAL PRIMARY KEY, uniqueid não é mais PK
- Novos campos: linkedid, sequence, peeraccount (Asterisk 22)
- Multi-tenant: tenant_id em todas as tabelas

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ asterisk_etc/messages
 *.sql.gz
 pgdata/
 postgres-data/
+postgres_data/
+*.db
+*.sqlite
 
 # ===== DOCKER =====
 # Volumes e dados locais
