fix: Remover pasta asterisk_sounds e esclarecer que sons PT-BR vêm embutidos
PROBLEMA:
- Pasta asterisk_sounds/ criada mas desnecessária
- Sons PT-BR já instalados no container durante build
- Confusão sobre necessidade de volume mount

SOLUÇÃO:
- Remover pasta asterisk_sounds/ do projeto
- Atualizar doc/INSTALACAO_LIMPA.md com nota explicativa
- Atualizar scripts/instalacao-limpa.sh (não criar pasta)
- Atualizar .gitignore (remover referências)
- Criar doc/ASTERISK_SOUNDS.md - Documentação completa sobre sons

SONS PT-BR:
✅ Origem: issabel_sounds_pt_BR (Marcel Savegnago)
✅ Localização: /var/lib/asterisk/sounds/pt_BR/ (dentro do container)
✅ Instalação: Automática via Dockerfile linhas 44-47
✅ Ativação: Set(CHANNEL(language)=pt_BR) no dialplan

SONS CUSTOMIZADOS:
⏭️ Opcional - apenas se necessário adicionar sons ALÉM dos PT-BR
⏭️ Via volume mount: ./custom_sounds:/var/lib/asterisk/sounds/custom
⏭️ Ou via COPY no Dockerfile para produção

DOCUMENTAÇÃO:
- 200 linhas sobre sons PT-BR incluídos
- Formatos suportados (GSM, ulaw, alaw, opus, wav)
- Como usar no dialplan
- Como adicionar sons customizados (3 métodos)
- Como gravar prompts via telefone
- Troubleshooting

BENEFÍCIOS:
✅ Menos confusão - sons já funcionam out-of-the-box
✅ Estrutura mais limpa (uma pasta a menos)
✅ Documentação clara sobre sons

--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,8 @@ asterisk_recordings/*.wav
 asterisk_recordings/*.mp3
 asterisk_recordings/*.gsm
 
-# Sons customizados grandes
-asterisk_sounds/*.wav
-asterisk_sounds/*.mp3
+# NOTA: Sons PT-BR já vêm embutidos no container
+# Pasta asterisk_sounds/ removida (desnecessária)
 
 # ===== BANCO DE DADOS =====
 # Dumps podem ser grandes
