feat: Adicionar volume custom_sounds para sons customizáveis
CONTEXTO:
- Usuário identificou necessidade de flexibilidade para customizar sons
- Sistema precisa permitir trocar voz feminina por masculina
- Precisa suportar outros idiomas além de PT-BR
- Sem acesso à pasta de sons, customização fica inviável

MUDANÇAS:
🔧 docker-compose.yml
- Adicionar volume: ./custom_sounds:/var/lib/asterisk/sounds/custom

🔧 docker-compose.optimized.yml
- Adicionar volume: ./custom_sounds:/var/lib/asterisk/sounds/custom:rw

📁 custom_sounds/
- Criar pasta com README.md completo (250 linhas)
- Documentação sobre como customizar sons
- Exemplos: voz masculina, multi-idioma, sons empresa
- Formatos suportados: GSM, ulaw, alaw, opus, WAV
- Como converter arquivos com sox/ffmpeg
- Como gravar prompts via dialplan (*555)
- Como usar no dialplan (Playback, language)
- Troubleshooting

📝 doc/ASTERISK_SOUNDS.md
- Adicionar seção destacando volume já configurado
- Link para custom_sounds/README.md
- Exemplos de uso no dialplan

📝 doc/INSTALACAO_LIMPA.md
- Incluir mkdir custom_sounds no passo 3
- Adicionar custom_sounds/ na lista de pastas
- Nota explicativa sobre customização opcional

📝 scripts/instalacao-limpa.sh
- Adicionar criação da pasta custom_sounds

📝 .gitignore
- Ignorar arquivos de áudio em custom_sounds/**
- Manter README.md e .gitkeep versionados

CASOS DE USO:
✅ Trocar voz PT-BR feminina por masculina
✅ Adicionar suporte a inglês/espanhol/outros
✅ Sons customizados da empresa (boas-vindas, menus)
✅ Prompts específicos por tenant (multi-empresa)
✅ Testar novas vozes sem rebuildar imagem

VANTAGENS:
? Flexibilidade total sem rebuild da imagem
? Fácil testar diferentes vozes/idiomas
? Suporte a multi-tenancy (sons por empresa)
? Documentação completa em custom_sounds/README.md
? Backward compatible (pasta opcional)

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,22 @@ asterisk_recordings/*.gsm
 # NOTA: Sons PT-BR já vêm embutidos no container
 # Pasta asterisk_sounds/ removida (desnecessária)
 
+# Sons customizados (ignora arquivos de áudio mas mantém estrutura)
+custom_sounds/*.gsm
+custom_sounds/*.ulaw
+custom_sounds/*.alaw
+custom_sounds/*.wav
+custom_sounds/*.mp3
+custom_sounds/*.opus
+custom_sounds/**/*.gsm
+custom_sounds/**/*.ulaw
+custom_sounds/**/*.alaw
+custom_sounds/**/*.wav
+custom_sounds/**/*.mp3
+custom_sounds/**/*.opus
+!custom_sounds/README.md
+!custom_sounds/.gitkeep
+
 # ===== BANCO DE DADOS =====
 # Dumps podem ser grandes
 *.dump
