docs: Adicionar guia completo para usar Docker Optimized
PROBLEMA:
- Usuário perguntou como usar docker-compose.optimized.yml e Dockerfile.optimized
- docker-compose.optimized.yml referenciava Dockerfile padrão (não otimizado)
- Sem documentação clara sobre como migrar

MUDANÇAS:
🔧 docker-compose.optimized.yml
- Corrigir build.dockerfile: Dockerfile -> Dockerfile.optimized
- Corrigir image tag: 22-latest -> 22-optimized

📝 doc/COMO_USAR_DOCKER_OPTIMIZED.md (novo arquivo - 400 linhas)
- Opção 1: Flag -f (mantém originais intactos)
- Opção 2: Substituir arquivos (produção)
- Opção 3: Alias bash (conveniência)
- Tabela comparativa Original vs Otimizado
- Guia completo de migração (8 passos)
- Migração de dados (bind mounts -> named volumes)
- Validação pós-migração (5 checks)
- Comandos úteis (rebuild, resources, logs, healthchecks)
- Troubleshooting (7 problemas comuns)
- Script completo de migração

📝 doc/RESUMO_INSTALACAO_LIMPA.md
- Adicionar comentário no build explicando como usar otimizado
- Referenciar nova documentação

USO:
# Testar otimizado sem alterar originais:
docker compose -f docker-compose.optimized.yml build asterisk-magnus
docker compose -f docker-compose.optimized.yml up -d

# Ou substituir e usar comandos normais:
cp Dockerfile.optimized Dockerfile
cp docker-compose.optimized.yml docker-compose.yml
docker compose build asterisk-magnus
docker compose up -d

BENEFÍCIOS:
✅ 3 formas documentadas de usar versão otimizada
✅ Guia completo de migração Original -> Otimizado
✅ Script de migração pronto para produção
✅ Troubleshooting de problemas comuns
✅ Validação pós-migração estruturada
✅ Backup do banco antes de migrar

--- a/docker-compose.optimized.yml
+++ b/docker-compose.optimized.yml
@@ -61,8 +61,9 @@ services:
   asterisk-magnus:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: magnus-pbx/asterisk:22-latest
+      dockerfile: Dockerfile.optimized
+    image: magnus-pbx/asterisk:22-optimized
+    container_name: asterisk-magnus
     container_name: asterisk-magnus
     hostname: asterisk-magnus
     restart: unless-stopped
