--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -22,7 +22,7 @@ RUN echo "Acquire::Check-Valid-Until \"false\";" > /etc/apt/apt.conf.d/99-ignore
     ca-certificates \
     uuid-dev \
     libxml2-dev \
-    libncurses5-dev \
+    libncurses-dev \
     libsqlite3-dev \
     libssl-dev \
     libjansson-dev \
