fix: Corrigir pacotes runtime Ubuntu 24.04 no Dockerfile.optimized
PROBLEMA:
- Build falhando no Stage 2 (runtime) do Dockerfile.optimized
- Erro: 'E: Unable to locate package libncurses5'
- Erro: 'E: Package libasound2 has no installation candidate'
- Ubuntu 24.04 mudou nomes de pacotes de runtime

CORREÇÕES:
🔧 Dockerfile.optimized (Stage 2 - Runtime)
- libncurses5 → libncurses6 (versão explícita para runtime)
- libasound2 → libasound2t64 (time64 transition no Ubuntu 24.04)

NOVOS ARQUIVOS:
📝 doc/ERROS_BUILD_UBUNTU24.md (300 linhas)
- Erro libncurses5 (causa + solução)
- Erro libasound2 (causa + solução)
- Tabela de pacotes corrigidos (Stage 1 vs Stage 2)
- Dockerfile corrigido completo (ambos stages)
- Como descobrir nome correto (3 métodos)
- Testar localmente (docker run ubuntu:24.04)
- Script de verificação de pacotes
- Tabela migração Ubuntu 22.04 → 24.04
- Validação final (4 passos)
- Referências (release notes, time64, ncurses6)

DIFERENÇA STAGE 1 vs STAGE 2:
Stage 1 (Builder - compilação):
- libncurses-dev ← Nome genérico OK
- libasound2-dev ← Ainda funciona

Stage 2 (Runtime - execução):
- libncurses6 ← Versão EXPLÍCITA necessária
- libasound2t64 ← Nova versão Time64

VALIDAR:
docker compose build --no-cache asterisk-magnus

BENEFÍCIOS:
✅ Build funciona em Ubuntu 24.04 (ambos stages)
✅ Documentação completa de erros comuns
✅ Como descobrir pacotes corretos
✅ Preparado para futuras migrações Ubuntu

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -89,7 +89,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # 1. Dependências de runtime (apenas o necessário)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libxml2 \
-    libncurses5 \
+    libncurses6 \
     libsqlite3-0 \
     libssl3 \
     libjansson4 \
@@ -97,7 +97,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     libbcg729-0 \
     libopus0 \
-    libasound2 \
+    libasound2t64 \
     libnewt0.52 \
     ca-certificates \
     curl \
