--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+# ============================================
+# MAGNUS PBX - Docker Compose
+# ============================================
+
 services:
   # --- BANCO DE DADOS ---
   postgres-magnus:
