fix: Corrigir URL de download do Asterisk (erro 404)
PROBLEMA:
- Dockerfile.optimized tentava baixar asterisk-22.1.0.tar.gz (não existe)
- Recebia erro HTTP 404: Not Found
- Build falhava no stage 1

CORREÇÃO:
✓ Dockerfile.optimized
  - Usar asterisk-22-current.tar.gz (sempre a versão mais recente)
  - Remover variável ASTERISK_VERSION desnecessária
  - tar -zxf asterisk-22-current.tar.gz (sem verbose)
  - cd asterisk-22.* (wildcard funciona com qualquer versão)

✓ Dockerfile
  - Padronizar com mesma estratégia
  - Remover ln -s desnecessário
  - Ajustar CFLAGS para usar asterisk-22.* no G.729
  - Remover flags verbose (-v) de todos os tar

RESULTADO:
- Download sempre usa versão LTS mais recente do Asterisk 22
- Build compatível com Ubuntu 24.04
- Consistência entre Dockerfile e Dockerfile.optimized

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -7,7 +7,6 @@ FROM ubuntu:24.04 AS builder
 
 # Variáveis de ambiente
 ENV DEBIAN_FRONTEND=noninteractive
-ENV ASTERISK_VERSION=22.1.0
 
 # =================================================================
 # STAGE 1: BUILD (Compilação)
@@ -44,9 +43,9 @@ RUN echo "Acquire::Check-Valid-Until \"false\";" > /etc/apt/apt.conf.d/99-ignore
 
 # 2. Download e compilação do Asterisk
 WORKDIR /usr/src
-RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-${ASTERISK_VERSION}.tar.gz" && \
-    tar -zxf "asterisk-${ASTERISK_VERSION}.tar.gz" && \
-    cd "asterisk-${ASTERISK_VERSION}" && \
+RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-current.tar.gz" && \
+    tar -zxf "asterisk-22-current.tar.gz" && \
+    cd asterisk-22.* && \
     ./contrib/scripts/get_mp3_source.sh && \
     ./contrib/scripts/install_prereq install && \
     ./configure \
