--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -65,11 +65,8 @@ RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-curre
     make -j$(nproc) && \
     make install && \
     make samples && \
-    rm -rf /usr/src/*
-
-# 3. Codec G.729
-WORKDIR /usr/src
-RUN mkdir -p asterisk-g72x && \
+    cd /usr/src && \
+    mkdir -p asterisk-g72x && \
     wget https://github.com/arkadijs/asterisk-g72x/archive/refs/heads/master.tar.gz -O /tmp/g729.tar.gz && \
     tar -zxf /tmp/g729.tar.gz -C asterisk-g72x --strip-components=1 && \
     cd asterisk-g72x && \
@@ -77,7 +74,7 @@ RUN mkdir -p asterisk-g72x && \
     CFLAGS="-I/usr/include/asterisk" ./configure --with-bcg729 && \
     make && \
     make install && \
-    rm -rf /tmp/g729.tar.gz /usr/src/asterisk-g72x
+    rm -rf /tmp/g729.tar.gz /usr/src/*
 
 # =================================================================
 # STAGE 2: RUNTIME (Imagem final)
