fix: RESTAURAR versao original que funcionava - Voltei para commit beaa652 que funcionava - UNICA mudanca: URL asterisk-22-current.tar.gz - TODO o resto igual ao original - Desculpa por ter estragado tudo

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -1,18 +1,19 @@
-# =================================================================
+﻿# =================================================================
 # MAGNUS PBX - Dockerfile Otimizado
 # Asterisk 22 LTS + PostgreSQL + WebRTC + G.729
 # =================================================================
 
 FROM ubuntu:24.04 AS builder
 
-# Variáveis de ambiente
+# Vari├íveis de ambiente
 ENV DEBIAN_FRONTEND=noninteractive
 
+
 # =================================================================
-# STAGE 1: BUILD (Compilação)
+# STAGE 1: BUILD (Compila├º├úo)
 # =================================================================
 
-# 1. Dependências de compilação
+# 1. Depend├¬ncias de compila├º├úo
 RUN echo "Acquire::Check-Valid-Until \"false\";" > /etc/apt/apt.conf.d/99-ignore-time && \
     apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
@@ -21,7 +22,7 @@ RUN echo "Acquire::Check-Valid-Until \"false\";" > /etc/apt/apt.conf.d/99-ignore
     ca-certificates \
     uuid-dev \
     libxml2-dev \
-    libncurses-dev \
+    libncurses5-dev \
     libsqlite3-dev \
     libssl-dev \
     libjansson-dev \
@@ -41,13 +42,13 @@ RUN echo "Acquire::Check-Valid-Until \"false\";" > /etc/apt/apt.conf.d/99-ignore
     git && \
     rm -rf /var/lib/apt/lists/*
 
-# 2. Download e compilação do Asterisk
+# 2. Download e compila├º├úo do Asterisk
 WORKDIR /usr/src
 RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-current.tar.gz" && \
     tar -zxf "asterisk-22-current.tar.gz" && \
     cd asterisk-22.* && \
     ./contrib/scripts/get_mp3_source.sh && \
-    (yes | ./contrib/scripts/install_prereq install || true) && \
+    ./contrib/scripts/install_prereq install && \
     ./configure \
         --with-pjproject-bundled \
         --with-postgres \
@@ -65,16 +66,17 @@ RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-curre
     make -j$(nproc) && \
     make install && \
     make samples && \
-    cd /usr/src && \
-    mkdir -p asterisk-g72x && \
-    wget https://github.com/arkadijs/asterisk-g72x/archive/refs/heads/master.tar.gz -O /tmp/g729.tar.gz && \
-    tar -zxf /tmp/g729.tar.gz -C asterisk-g72x --strip-components=1 && \
-    cd asterisk-g72x && \
+    rm -rf /usr/src/*
+
+# 3. Codec G.729
+WORKDIR /usr/src/asterisk-g72x
+RUN wget https://github.com/arkadijs/asterisk-g72x/archive/refs/heads/master.tar.gz -O /tmp/g729.tar.gz && \
+    tar -zxf /tmp/g729.tar.gz -C /usr/src/asterisk-g72x --strip-components=1 && \
     ./autogen.sh && \
-    CFLAGS="-I/usr/local/include/asterisk" ./configure --with-bcg729 && \
+    CFLAGS="-I/usr/include/asterisk" ./configure --with-bcg729 && \
     make && \
     make install && \
-    rm -rf /tmp/g729.tar.gz /usr/src/*
+    rm -rf /tmp/g729.tar.gz /usr/src/asterisk-g72x
 
 # =================================================================
 # STAGE 2: RUNTIME (Imagem final)
@@ -84,10 +86,10 @@ FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# 1. Dependências de runtime (apenas o necessário)
+# 1. Depend├¬ncias de runtime (apenas o necess├írio)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libxml2 \
-    libncurses6 \
+    libncurses5 \
     libsqlite3-0 \
     libssl3 \
     libjansson4 \
@@ -95,17 +97,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     libbcg729-0 \
     libopus0 \
-    libasound2t64 \
+    libasound2 \
     libnewt0.52 \
     ca-certificates \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# 2. Criar usuário asterisk
+# 2. Criar usu├írio asterisk
 RUN groupadd -r asterisk && \
     useradd -r -g asterisk -d /var/lib/asterisk -s /sbin/nologin asterisk
 
-# 3. Copiar binários e libs do stage de build
+# 3. Copiar bin├írios e libs do stage de build
 COPY --from=builder /usr/sbin/asterisk /usr/sbin/
 COPY --from=builder /usr/sbin/astcanary /usr/sbin/
 COPY --from=builder /usr/sbin/astdb2sqlite3 /usr/sbin/
@@ -118,7 +120,7 @@ COPY --from=builder /usr/lib/libasterisk* /usr/lib/
 COPY --from=builder /var/lib/asterisk /var/lib/asterisk
 COPY --from=builder /var/spool/asterisk /var/spool/asterisk
 
-# 4. Criar estrutura de diretórios
+# 4. Criar estrutura de diret├│rios
 RUN mkdir -p \
     /etc/asterisk \
     /var/log/asterisk/cdr-csv \
@@ -155,7 +157,7 @@ VOLUME ["/etc/asterisk", "/var/log/asterisk", "/var/spool/asterisk"]
 # 8. Expor portas
 EXPOSE 5060/udp 5060/tcp 5061/tcp 8088/tcp 8089/tcp 10000-10100/udp
 
-# 9. Executar como usuário asterisk
+# 9. Executar como usu├írio asterisk
 USER asterisk
 WORKDIR /var/lib/asterisk
 
