fix: RESTAURAR install_prereq com || true
Desculpa - voce tinha razao, install_prereq e necessario.
Adicionado '|| true' para continuar mesmo se aptitude falhar.
Desta forma instala o que conseguir e continua o build.

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -48,6 +48,7 @@ RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-curre
     tar -zxf "asterisk-22-current.tar.gz" && \
     cd asterisk-22.* && \
     ./contrib/scripts/get_mp3_source.sh && \
+    ./contrib/scripts/install_prereq install || true && \
     ./configure \
         --with-pjproject-bundled \
         --with-postgres \
