fix: USAR O PATH CORRETO DO USUARIO -I/usr/src/asterisk/include
Dockerfile: restaurado path do usuario que FUNCIONAVA
Dockerfile.optimized: movido G.729 para ANTES de apagar /usr/src
- Criar symlink ln -s asterisk-22.* asterisk
- Compilar G.729 com -I/usr/src/asterisk/include
- DEPOIS apagar /usr/src

AGORA ESTA EXATAMENTE COMO O USUARIO FEZ E FUNCIONOU.

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -66,17 +66,17 @@ RUN wget "http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-22-curre
     make -j$(nproc) && \
     make install && \
     make samples && \
-    rm -rf /usr/src/*
-
-# 3. Codec G.729
-WORKDIR /usr/src/asterisk-g72x
-RUN wget https://github.com/arkadijs/asterisk-g72x/archive/refs/heads/master.tar.gz -O /tmp/g729.tar.gz && \
-    tar -zxf /tmp/g729.tar.gz -C /usr/src/asterisk-g72x --strip-components=1 && \
+    cd /usr/src && \
+    ln -s asterisk-22.* asterisk && \
+    wget https://github.com/arkadijs/asterisk-g72x/archive/refs/heads/master.tar.gz -O /tmp/g729.tar.gz && \
+    mkdir -p asterisk-g72x && \
+    tar -zxf /tmp/g729.tar.gz -C asterisk-g72x --strip-components=1 && \
+    cd asterisk-g72x && \
     ./autogen.sh && \
-    CFLAGS="-I/usr/local/include" ./configure --with-bcg729 && \
+    CFLAGS="-I/usr/src/asterisk/include" ./configure --with-bcg729 && \
     make && \
     make install && \
-    rm -rf /tmp/g729.tar.gz /usr/src/asterisk-g72x
+    rm -rf /usr/src/* /tmp/g729.tar.gz
 
 # =================================================================
 # STAGE 2: RUNTIME (Imagem final)
