fix: Usar imagem do Docker Hub em vez de build local
- Comentado build local
- Usando: wagnercne/magnus-pbx:optimized (Docker Hub)
- Para fazer build local, basta descomentar as linhas

--- a/docker-compose.optimized.yml
+++ b/docker-compose.optimized.yml
@@ -57,10 +57,11 @@ services:
 
   # --- TELEFONIA (Asterisk 22) ---
   asterisk-magnus:
-    build:
-      context: .
-      dockerfile: Dockerfile.optimized
-    image: magnus-pbx/asterisk:22-optimized
+    # Para fazer build local, descomente as linhas abaixo:
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile.optimized
+    image: wagnercne/magnus-pbx:optimized
     container_name: asterisk-magnus
     hostname: asterisk-magnus
     restart: unless-stopped
