fix: REDUZIR limites de recursos do Asterisk - VM travando
PROBLEMA: VM com 2 cores/2GB RAM estava travando (soft lockup, OOM)
CAUSA: Asterisk configurado para usar TODO o recurso (2 CPUs, 2G RAM)

SOLUCAO:
- CPU limits: 2 -> 1.5 (deixa 0.5 para sistema)
- Memory limits: 2G -> 1.5G (deixa 512M para sistema)
- Reservations: 0.5/512M -> 0.3/256M

Agora o sistema tera recursos suficientes para funcionar.

--- a/docker-compose.optimized.yml
+++ b/docker-compose.optimized.yml
@@ -100,11 +100,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2'
-          memory: 2G
+          cpus: '1.5'      # Deixa 0.5 CPU para sistema/outros containers
+          memory: 1.5G     # Deixa 512M para sistema/outros containers
         reservations:
-          cpus: '0.5'
-          memory: 512M
+          cpus: '0.3'
+          memory: 256M
 
   # --- CACHE (Redis 7) ---
   redis-magnus:
