fix: Remover opcao invalida -u do CMD do Asterisk
Erro: asterisk: invalid option -- 'u'
Causa: -u nao e uma opcao valida do comando asterisk
Solucao: Remover -u asterisk do CMD (usuario ja definido com USER asterisk)

CMD correto: asterisk -f -vvv

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -162,4 +162,4 @@ USER asterisk
 WORKDIR /var/lib/asterisk
 
 # 10. Comando inicial
-CMD ["asterisk", "-f", "-vvv", "-u", "asterisk"]
+CMD ["asterisk", "-f", "-vvv"]
