fix: Configurar queue_log para usar PostgreSQL em vez de arquivo
ERRO: Unable to create queue log: Permission denied
CAUSA: queue_log tentando escrever em arquivo sem permissao

SOLUCAO:
1. logger.conf: queue_log = yes, queue_log_to_file = no
2. extconfig.conf: queue_log => pgsql,general
3. Adicionar queues e queue_members no realtime

Agora queue_log grava no banco de dados (tabela ja existe no schema).

--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -10,6 +10,17 @@ ps_contacts => pgsql,general
 ps_endpoint_id_ips => pgsql,general
 
 ; ============================================
+; QUEUE LOG - Log de eventos de filas
+; ============================================
+queue_log => pgsql,general
+
+; ============================================
+; QUEUES - Filas de atendimento (realtime)
+; ============================================
+queues => pgsql,general
+queue_members => pgsql,general
+
+; ============================================
 ; IMPORTANTE: Extensions NÃO deve estar aqui!
 ; ============================================
 ; O Realtime de extensions NÃO funciona com pattern matching.
