--- a/asterisk_etc/logger.conf
+++ b/asterisk_etc/logger.conf
@@ -8,6 +8,10 @@
 ; of the logging system.
 
 [general]
+; Queue log configuration
+queue_log = yes
+queue_log_to_file = no
+queue_log_realtime_use_gmt = no
 ;
 ; Customize the display of debug message time stamps
 ; this example is the ISO 8601 date format (yyyy-mm-dd HH:MM:SS)
