--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -5,7 +5,7 @@
 ps_endpoints => pgsql,general
 ps_auths => pgsql,general
 ps_aors => pgsql,general
-ps_transports => pgsql,general
+; ps_transports definido em pjsip.conf (não no banco)
 ps_contacts => pgsql,general
 ps_endpoint_id_ips => pgsql,general
 
