--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -14,7 +14,7 @@
 endpoint=realtime,ps_endpoints
 auth=realtime,ps_auths
 aor=realtime,ps_aors
-transport=realtime,ps_transports
+; transport definido em pjsip.conf (não no banco)
 contact=realtime,ps_contacts
 
 [res_pjsip_endpoint_identifier_ip]
