feat: Adicionar suporte multi-tenant por identificacao IP
PROBLEMA: Softphones padrao (Linphone, Zoiper) enviam apenas username
sem @tenant quando registram (ex: 1002 em vez de 1002@belavista)

SOLUCAO: Endpoint Identification por IP/subnet
- Criar tabela ps_identify para mapear IPs -> endpoints
- Configurar sorcery.conf e extconfig.conf para usar ps_identify
- Manter endpoint ID interno como 1002@belavista
- Username em ps_auths continua sendo apenas 1002
- Asterisk identifica tenant pelo IP de origem

ARQUIVOS:
- sql/01_init_schema.sql: tabela ps_identify
- asterisk_etc/sorcery.conf: res_pjsip_endpoint_identifier_ip
- asterisk_etc/extconfig.conf: ps_identify => pgsql
- sql/02_sample_data.sql: exemplos de mapeamento IP
- docs/MULTI-TENANT-CONFIG.md: guia completo com 3 opcoes

Esta e a solucao usada por grandes provedores VoIP SaaS.

--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -7,7 +7,7 @@ ps_auths => pgsql,general
 ps_aors => pgsql,general
 ; ps_transports definido em pjsip.conf (não no banco)
 ps_contacts => pgsql,general
-ps_endpoint_id_ips => pgsql,general
+ps_identify => pgsql,general
 
 ; ============================================
 ; QUEUE LOG - Log de eventos de filas
