--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -18,8 +18,8 @@ aor=realtime,ps_aors
 contact=realtime,ps_contacts
 
 [res_pjsip_endpoint_identifier_ip]
-; Identificação de endpoints por endereço IP
-identify=realtime,ps_endpoint_id_ips
+; Identificação de endpoints por endereço IP (multi-tenant)
+identify=realtime,ps_identify
 
 ; ============================================
 ; NOTA IMPORTANTE SOBRE TRANSPORTS
