feat: mover transport para realtime (banco de dados)
Mudanças:
- Criar script para transport via ps_transports
- Remover transport-udp do pjsip.conf
- Configurar domínios aceitos no transport
- Benefícios: configuração dinâmica, suporte a múltiplos domínios

Agora o transport está no banco com:
- IP: 10.3.2.253
- Domínios: belavista/acme/techno.magnussystem.com.br

--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -25,27 +25,15 @@ threadpool_max_size=50
 disable_tcp_switch=yes
 
 ; ============================================
-; TRANSPORT - UDP (Compartilhado)
+; TRANSPORT - Configurado via Realtime (Banco)
 ; ============================================
-; Este transport é usado por TODOS os tenants
-; Mais eficiente que ter um transport por tenant no banco
-
-[transport-udp]
-type=transport
-protocol=udp
-bind=0.0.0.0:5060
-; Se o Asterisk está atrás de NAT, configure:
-; external_media_address=SEU_IP_PUBLICO
-; external_signaling_address=SEU_IP_PUBLICO
-; local_net=192.168.0.0/16
-
-; ============================================
-; TRANSPORT - WebRTC (WSS)
-; ============================================
-[transport-wss]
-type=transport
-protocol=wss
-bind=0.0.0.0:8089
+; O transport agora está no banco (ps_transports)
+; Vantagens:
+; - Configuração de domínios aceitos
+; - Mudanças sem reiniciar Asterisk
+; - Consistente com endpoints/auths/aors
+;
+; Para criar: execute scripts/create-transport-realtime.sql
 
 ; ============================================
 ; REALTIME ENDPOINTS, AUTHS, AORS
