feat: transport genérico + ps_domain_aliases (solução SaaS)
Problema anterior:
- Transport com domain hardcoded = não escalável
- Cada novo tenant exigia editar pjsip.conf + restart

Solução SaaS (Opção A):
✅ Transport GENÉRICO sem campo domain
✅ Matching via ps_domain_aliases (banco de dados)
✅ Habilitar domain_alias no sorcery.conf
✅ Mapear ps_domain_aliases no extconfig.conf

Vantagens:
- Adicione tenants SEM tocar em pjsip.conf
- Totalmente dinâmico via banco
- Escalável para 1000+ tenants
- Zero restart para novos tenants

Arquitetura:
1. Transport aceita QUALQUER domínio
2. ps_domain_aliases mapeia: belavista.magnussystem.com.br → belavista
3. Asterisk busca: endpoint 1001@belavista no banco

--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -5,9 +5,10 @@
 ps_endpoints => pgsql,general
 ps_auths => pgsql,general
 ps_aors => pgsql,general
-ps_transports => pgsql,general
+; Transport definido em pjsip.conf (não funciona bem via realtime)
 ps_contacts => pgsql,general
 ps_identify => pgsql,general
+ps_domain_aliases => pgsql,general
 
 ; ============================================
 ; QUEUE LOG - Log de eventos de filas
