--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -25,15 +25,32 @@ threadpool_max_size=50
 disable_tcp_switch=yes
 
 ; ============================================
-; TRANSPORT - Configurado via Realtime (Banco)
+; TRANSPORT - UDP (GENÉRICO para Multi-tenant)
 ; ============================================
-; O transport agora está no banco (ps_transports)
-; Vantagens:
-; - Configuração de domínios aceitos
-; - Mudanças sem reiniciar Asterisk
-; - Consistente com endpoints/auths/aors
+; Transport genérico usado por TODOS os tenants.
+; SEM campo 'domain' = aceita QUALQUER domínio.
+; O matching tenant/domain é feito via ps_domain_aliases (database).
 ;
-; Para criar: execute scripts/create-transport-realtime.sql
+; Vantagens para SaaS:
+; - Adicione novos tenants sem editar este arquivo
+; - Totalmente dinâmico via banco de dados
+; - Escalável para centenas de tenants
+;
+; Como funciona:
+; 1. Softphone registra: 1001@belavista.magnussystem.com.br
+; 2. Transport aceita (sem restrição)
+; 3. ps_domain_aliases mapeia: belavista.magnussystem.com.br → belavista
+; 4. Asterisk busca endpoint: 1001@belavista no banco
+
+[transport-udp]
+type=transport
+protocol=udp
+bind=0.0.0.0:5060
+; SEM campo 'domain' = aceita todos os domínios (matching via ps_domain_aliases)
+; Se o Asterisk está atrás de NAT, configure:
+; external_media_address=SEU_IP_PUBLICO
+; external_signaling_address=SEU_IP_PUBLICO
+; local_net=10.3.2.0/24
 
 ; ============================================
 ; REALTIME ENDPOINTS, AUTHS, AORS
