--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -14,8 +14,10 @@
 endpoint=realtime,ps_endpoints
 auth=realtime,ps_auths
 aor=realtime,ps_aors
-transport=realtime,ps_transports
+; transport definido em pjsip.conf (realtime não funciona bem)
 contact=realtime,ps_contacts
+; Domain alias para matching multi-tenant dinâmico
+domain_alias=realtime,ps_domain_aliases
 
 [res_pjsip_endpoint_identifier_ip]
 ; Identificação de endpoints por endereço IP (multi-tenant)
