fix: desabilitar ps_identify (tabela não existe e não é necessária)
Problema:
- Asterisk tentando carregar ps_identify via realtime
- Tabela ps_identify não existe no banco
- Causando loop infinito de erros
- Bloqueando registro de softphones

Solução:
- Comentar ps_identify no extconfig.conf
- Comentar identify no sorcery.conf
- Não precisamos identificação por IP (usamos DNS)

Nossa identificação:
✅ DNS via ps_domain_aliases (belavista.magnussystem.com.br → belavista)
❌ IP via ps_identify (não usado)

--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -7,7 +7,7 @@ ps_auths => pgsql,general
 ps_aors => pgsql,general
 ; Transport definido em pjsip.conf (não funciona bem via realtime)
 ps_contacts => pgsql,general
-ps_identify => pgsql,general
+; ps_identify => pgsql,general  (comentado - usamos DNS via ps_domain_aliases)
 ps_domain_aliases => pgsql,general
 
 ; ============================================
