--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -20,8 +20,8 @@ contact=realtime,ps_contacts
 domain_alias=realtime,ps_domain_aliases
 
 [res_pjsip_endpoint_identifier_ip]
-; Identificação de endpoints por endereço IP (multi-tenant)
-identify=realtime,ps_identify
+; Identificação por IP desabilitada (usamos DNS via ps_domain_aliases)
+; identify=realtime,ps_identify
 
 ; ============================================
 ; NOTA IMPORTANTE SOBRE TRANSPORTS
